; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/sparc/extr_sparc.c_sparc_absnegfloat_split_legitimate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/sparc/extr_sparc.c_sparc_absnegfloat_split_legitimate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sparc_absnegfloat_split_legitimate(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i64 @GET_CODE(i32 %6)
  %8 = load i64, i64* @REG, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = call i64 @GET_CODE(i32 %12)
  %14 = load i64, i64* @REG, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %25

17:                                               ; preds = %11
  %18 = load i32, i32* %4, align 4
  %19 = call i64 @REGNO(i32 %18)
  %20 = load i32, i32* %5, align 4
  %21 = call i64 @REGNO(i32 %20)
  %22 = icmp eq i64 %19, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %25

24:                                               ; preds = %17
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23, %16, %10
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @GET_CODE(i32) #1

declare dso_local i64 @REGNO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
